# phlogiston

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: example-chart.html  example-chart.tsv
phlogiston/: __main__.py  cli.py  datatypes.py  handlers.py  io.py  main.py  plot.py
tests/: test_cli.py  test_readers.py  test_spheres.py  test_writers.py
tests/data/: example-planes.csv  example-planes.tsv  example-planes.xlsx
