[tool.poetry]
name = "phlogiston"
version = "0.0.1"
description = "Python package to work with fictional star map data."
authors = ["TheOafidian <tim.van.rillaer@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
